--- a/dashcols/templates/_partials/_footer.twig
+++ b/dashcols/templates/_partials/_footer.twig
@@ -1,3 +1,3 @@
 <footer id="dashCols-colophone">
-	<p>DashCols v. {{ craft.dashCols.version }} • <a href="{{ craft.dashCols.getPluginUrl }}">GitHub</a></p>
+	<p>{{ craft.dashCols.getPluginName }} v. {{ craft.dashCols.version }} • <a href="{{ url('dashcols/about') }}">About</a> • <a href="{{ url('settings/plugins/dashcols') }}">Settings</a> • <a href="{{ craft.dashCols.getPluginUrl }}">GitHub</a></p>
 </footer>
