--- a/dashcols/templates/_layouts/_edit.twig
+++ b/dashcols/templates/_layouts/_edit.twig
@@ -84,6 +84,8 @@
 					<input type="hidden" name="sectionId" value="{{ section.id }}" />
 				{% elseif categoryGroup is defined %}
 					<input type="hidden" name="categoryGroupId" value="{{ categoryGroup.id }}" />
+				{% elseif assetSource is defined %}
+					<input type="hidden" name="assetSourceId" value="{{ assetSource.id }}" />
 				{% elseif userGroup is defined %}
 					<input type="hidden" name="userGroupId" value="{{ userGroup.id }}" />
 				{% elseif listingHandle is defined %}
