--- a/dashcols/templates/about.twig
+++ b/dashcols/templates/about.twig
@@ -27,6 +27,12 @@
 				<tbody>
 					<tr>
 						<td width="25%">
+							<a href="http://buildwithcraft.com/docs/assets-fields" class="go">Assets</a>
+						</td>
+						<td class="desc">DashCols will only display the first Asset in a field in full (thumbnail if image, icon + filename if file), in addition to the the total filecount (if more than 1 Asset in field)</td>
+					</tr>
+					<tr>
+						<td width="25%">
 							<a href="http://buildwithcraft.com/docs/categories-fields" class="go">Categories</a>
 						</td>
 						<td class="desc">Outputs as a comma-separated list</td>
@@ -114,24 +120,6 @@
 
 			<br />
 
-			<h3 class="dashCols-title">Partially supported fields</h3>
-
-			<table id="dashCols-supportedFields" class="data fullwidth collapsible">
-				<thead>
-					<th scope="col">{{ 'Field type' | t }}</th>
-				</thead>
-				<tbody>
-					<tr>
-						<td width="25%">
-							<a href="http://buildwithcraft.com/docs/assets-fields" class="go">Assets</a>
-						</td>
-						<td class="desc">DashCols will only display the first Asset in a field in full (thumbnail if image, icon + filename if file), in addition to the the total filecount (if more than 1 Asset in field)</td>
-					</tr>
-				</tbody>
-			</table>
-
-			<br />
-
 			<h3 class="dashCols-title">Unsupported fields</h3>
 
 			<table id="dashCols-supportedFields" class="data fullwidth collapsible">
@@ -167,6 +155,13 @@
 		<section>
 
 			<h3 class="dashCols-title">{{ 'Changelog' | t }}</h3>
+
+			<h5>Version 1.3 – 11.04.15</h5>
+			<ul>
+				<li>Now supports editing columns for <em>Users</em> – big thanks to Lindsey DiLoreto for the help!</li>
+				<li>Now supports editing columns for <em>Assets</em></li>
+				<li>CP section redesigned</li>
+			</ul>
 
 			<h5>Version 1.2.5 - 09.23.15</h5>
 			<ul>
