Removes jank when clicking the Sort button in index tables view

--- a/dashcols/templates/about.twig
+++ b/dashcols/templates/about.twig
@@ -161,6 +161,7 @@
 				<li>Now supports editing columns for <em>Users</em> – big thanks to Lindsey DiLoreto for the help!</li>
 				<li>Now supports editing columns for <em>Assets</em></li>
 				<li>CP section redesigned</li>
+				<li>Fixes issue with the _Edit columns_ button not always appearing</li>
 			</ul>
 
 			<h5>Version 1.2.5 - 09.23.15</h5>
