--- a/dashcols/templates/about.twig
+++ b/dashcols/templates/about.twig
@@ -14,6 +14,10 @@
 
 		<p><a href="{{ craft.dashCols.getPluginUrl }}">{{ craft.dashCols.getPluginUrl }}</a></p>
 
+		{% if craft.dashCols.isCraftRequiredVersion == false %}
+		<p class="error"><strong>Important:</strong> {{ craft.dashCols.getPluginName }} requires Craft {{ craft.dashCols.requiredCraftVersion }} or newer. You'll need to update Craft to use this plugin.</p>
+		{% endif %}
+
 		<hr />
 
 		<section>
@@ -23,13 +27,14 @@
 			<table id="dashCols-supportedFields" class="data fullwidth collapsible">
 				<thead>
 					<th scope="col">{{ 'Field type' | t }}</th>
+					<th scope="col">{{ 'Notes' | t }}</th>
 				</thead>
 				<tbody>
 					<tr>
 						<td width="25%">
 							<a href="http://buildwithcraft.com/docs/assets-fields" class="go">Assets</a>
 						</td>
-						<td class="desc">DashCols will only display the first Asset in a field in full (thumbnail if image, icon + filename if file), in addition to the the total filecount (if more than 1 Asset in field)</td>
+						<td class="desc">DashCols will only display the first Asset in a field in full (thumbnail if jpg/gif/png or icon + filename if other filetype), in addition to the the total filecount (if more than 1 Asset in field)</td>
 					</tr>
 					<tr>
 						<td width="25%">
@@ -162,6 +167,7 @@
 				<li>Now supports editing columns for <em>Assets</em></li>
 				<li>CP section redesigned</li>
 				<li>Fixes issue with the _Edit columns_ button not always appearing</li>
+				<li>Various small improvements and fixes</li>
 			</ul>
 
 			<h5>Version 1.2.5 - 09.23.15</h5>
