--- a/dashcols/resources/css/dashcols.index.css
+++ b/dashcols/resources/css/dashcols.index.css
@@ -7,7 +7,7 @@
   margin-top: 10px; }
 
 .dashCols-scrollable {
-  overflow-x: scroll; }
+  overflow-x: auto; }
 
 .elements.datatablesorthelper .move.icon,
 .elementindex .move.icon {
